# triggeralgs

./: CMakeLists.txt  README.md
.github/workflows/: dunedaq-develop-cpp-ci.yml  dunedaq-v4-cpp-ci.yml
docs/: README.md  conceptual_overview.md  configuring_dunedaq.md  contributing.md  running_triton.md  triton_installation.md
exec/: run_trivial_candidate.cxx
include/triggeralgs/: AbstractFactory.hpp  AbstractFactory.hxx  Issues.hpp  TAWindow.hpp  TPWindow.hpp  TriggerActivity.hpp  TriggerActivityFactory.hpp  TriggerActivityFactoryPDS.hpp  TriggerActivityMaker.hpp  TriggerActivityMakerPDS.hpp  TriggerActivityPDS.hpp  TriggerCandidate.hpp  TriggerCandidateFactory.hpp  TriggerCandidateFactoryPDS.hpp  TriggerCandidateMaker.hpp  TriggerCandidateMakerPDS.hpp  TriggerCandidatePDS.hpp  TriggerCandidateType.hpp  TriggerObjectOverlay.hpp  TriggerPrimitivePDS.hpp  Types.hpp
include/triggeralgs/ADCSimpleWindow/: README.md  TAMakerADCSimpleWindow.hpp  TAMakerADCSimpleWindowAlgorithm.hpp  TCMakerADCSimpleWindow.hpp  TCMakerADCSimpleWindowAlgorithm.hpp  TriggerActivityMakerADCSimpleWindow.hpp  TriggerCandidateMakerADCSimpleWindow.hpp
include/triggeralgs/Adjacency/: TriggerActivityMakerAdjacency.hpp
include/triggeralgs/Blockers/: Blocker.hpp  BlockerDecorator.hpp  LowNumberOfInputsBlocker.hpp  SimpleBlocker.hpp
include/triggeralgs/BundleN/: TAMakerBundleNAlgorithm.hpp  TCMakerBundleNAlgorithm.hpp  TriggerActivityMakerBundleN.hpp  TriggerCandidateMakerBundleN.hpp
include/triggeralgs/ChannelAdjacency/: TAMakerChannelAdjacencyAlgorithm.hpp  TCMakerChannelAdjacencyAlgorithm.hpp
include/triggeralgs/ChannelDistance/: TAMakerChannelDistanceAlgorithm.hpp  TCMakerChannelDistanceAlgorithm.hpp  TriggerActivityMakerChannelDistance.hpp
include/triggeralgs/ChannelTimeAdjacency/: README.md  TriggerActivityMakerChannelTimeAdjacency.hpp  TriggerCandidateMakerChannelTimeAdjacency.hpp
include/triggeralgs/Closers/: Closer.hpp  CloserDecorator.hpp  MaxTimeCloser.hpp  SimpleCloser.hpp
include/triggeralgs/HorizontalMuon/: TAMakerHorizontalMuonAlgorithm.hpp  TCMakerHorizontalMuonAlgorithm.hpp  TriggerCandidateMakerHorizontalMuon.hpp
include/triggeralgs/Michel/: TriggerActivityMakerMichel.hpp  TriggerCandidateMakerMichel.hpp  TriggerDecisionMakerMichel.hpp
include/triggeralgs/MichelElectron/: TAMakerMichelElectronAlgorithm.hpp  TCMakerMichelElectronAlgorithm.hpp  TriggerActivityMakerMichelElectron.hpp  TriggerCandidateMakerMichelElectron.hpp
include/triggeralgs/NChannelHits/: README.md  TriggerActivityMakerNChannelHits.hpp  TriggerCandidateMakerNChannelHits.hpp
include/triggeralgs/PDS/: TriggerActivityMakerPDS.hpp  TriggerCandidateMakerPDS.hpp
include/triggeralgs/PDSTimeClustering/: TAMakerPDSTimeClusteringAlgorithm.hpp  TCMakerPDSTimeClusteringAlgorithm.hpp  TriggerActivityMakerPDSTimeClusteringAlgorithm.hpp  TriggerCandidateMakerPDSTimeClusteringAlgorithm.hpp
include/triggeralgs/PlaneCoincidence/: TAMakerPlaneCoincidenceAlgorithm.hpp  TCMakerPlaneCoincidenceAlgorithm.hpp  TriggerActivityMakerPlaneCoincidence.hpp  TriggerCandidateMakerPlaneCoincidence.hpp
src/: .TriggerActivityMakerMichel.cpp.swm  .TriggerActivityMakerMichel.cpp.swn  .TriggerActivityMakerMichel.cpp.swo  TAMakerADCSimpleWindow.cpp  TAMakerADCSimpleWindowAlgorithm.cpp  TAMakerBundleNAlgorithm.cpp  TAMakerChannelAdjacencyAlgorithm.cpp  TAMakerChannelDistanceAlgorithm.cpp  TAMakerDBSCANAlgorithm.cpp  TAMakerHorizontalMuonAlgorithm.cpp  TAMakerMichelElectronAlgorithm.cpp  TAMakerPDSTimeClusteringAlgorithm.cpp  TAMakerPlaneCoincidenceAlgorithm.cpp  TAMakerPrescaleAlgorithm.cpp  TAMakerSupernovaAlgorithm.cpp  TCMakerADCSimpleWindow.cpp  TCMakerADCSimpleWindowAlgorithm.cpp  TCMakerBundleNAlgorithm.cpp  TCMakerChannelAdjacencyAlgorithm.cpp  TCMakerChannelDistanceAlgorithm.cpp  TCMakerDBSCANAlgorithm.cpp  TCMakerHorizontalMuonAlgorithm.cpp  TCMakerMichelElectronAlgorithm.cpp  TCMakerPDSTimeClusteringAlgorithm.cpp  TCMakerPlaneCoincidenceAlgorithm.cpp  TCMakerPrescaleAlgorithm.cpp  TCMakerSupernovaAlgorithm.cpp  TDMakerSupernovaAlgorithm.cpp  TriggerActivityMakerADCSimpleWindow.cpp  TriggerActivityMakerAdjacency.cpp  TriggerActivityMakerBundleN.cpp  TriggerActivityMakerChannelAdjacency.cpp  TriggerActivityMakerChannelDistance.cpp  TriggerActivityMakerChannelTimeAdjacency.cpp  TriggerActivityMakerDBSCAN.cpp  TriggerActivityMakerHorizontalMuon.cpp  TriggerActivityMakerMichel.cpp  TriggerActivityMakerMichelElectron.cpp  TriggerActivityMakerMultiProng.cpp  TriggerActivityMakerNChannelHits.cpp  (+22 more)
src/Triton/: ModelIOHandler.cpp  TritonClient.cpp  TritonData.cpp  triton_utils.cpp
src/dbscan/: dbscan.cpp
test/: test_factory.cxx
(+26 files in other folders)
